--- a/Beegin.html
+++ b/Beegin.html
@@ -14,7 +14,9 @@
 <tw-storydata name="Beegin" startnode="1" creator="Twine" creator-version="2.0.11" ifid="330EF230-6E56-4CF3-B69F-F44E0C427FAC" format="Harlowe" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 </script><tw-passagedata pid="1" name="Beegin+End" tags="" position="76,90">You begin at The End (click The End, it expands into description of The End, a local bar). You are sad (click on sad, it expands into reasons why). Everyone is sad. But soon happiness will happen, because She is arriving (She expands into the Queen). Everyone is happy until dark viscuous blood is coughed up by the queen. Hilarity ensues. You run forward, pushing aside the drones panicking around Her. &quot;Let me through,&quot; you say. &quot;I&#39;m a [[doctor]].&quot;</tw-passagedata>
@@ -60,7 +62,7 @@ Please leave this passage here, more for in case I forgot than anything else.</t
 [[Refuse]]</tw-passagedata>
 <tw-passagedata pid="16" name="Accept" tags="" position="201,724">You do the time warp for the first and only [[time|Warp]].</tw-passagedata>
 <tw-passagedata pid="17" name="Refuse" tags="" position="339,725">You refuse, drones try to stop you, old mystic lets you go sadly. Gripping emotional writing about dying days later, full of regrets. But coach always said there was no crying in time travel.</tw-passagedata>
-<tw-passagedata pid="18" name="Warp" tags="" position="69.0001,844">
+<tw-passagedata pid="18" name="Warp" tags="" position="69,844">
 -1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
 As you perform the dance, the amulet around your neck glows. The glow turns dark, and seems to be radiating the very absence of light. Shit&#39;s straight spoopy, yo.
 
@@ -91,42 +93,143 @@ What will you do?
 option
 option
 oh hey look an option</tw-passagedata>
-<tw-passagedata pid="20" name="Main Plaza" tags="" position="67.0001,969">This is where shit really starts poppin. Not poopin. That&#39;s a different game.
-
+<tw-passagedata pid="20" name="Main Plaza" tags="" position="81,984">This is where shit really starts poppin. Not poopin. That&#39;s a different game. Descriptions n shit.
 
 -1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
-First things first, you need to go to the [[Hospital|Hospital Lobby]].</tw-passagedata>
+First things first, you need to go to the [[Hospital|Hospital Lobby]].
+
+if visited Supply Closet, then show a bunch of shit like this about choosing your paths and hints and stuff, and below the directional map
+
+after this choice, the bunch of shit is gone, and its just 
+
+-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-
+
+the directional map
+</tw-passagedata>
 <tw-passagedata pid="21" name="Pawn Shop" tags="" position="787,1078">Bluh bluh description
 
 If you have nothing: &quot;If ya got nuthin to swap for, then scram, chief.&quot;
-If you have</tw-passagedata>
+If you have the old book from the derelict housing, you can get a book that allows you to always skip the sewer maze.
+If you have the mcguffin from the abandoned nigthtclub idfk</tw-passagedata>
 <tw-passagedata pid="22" name="Hospital Lobby" tags="" position="936,1082">The hospital is clean and smells of cleanliness.
 
 -1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
-You walk up to the counter and politely ask where the babies are. You are directed where to go. You start to walk off, but double back to thank the secretary attendant person thing. She looks up politely as you thank her, but she seems puzzled. &quot;For what? May I help you, ma&#39;am?&quot; stuff blah blah you walk off to the [[Pupae Ward]]</tw-passagedata>
-<tw-passagedata pid="23" name="GHF1" tags="" position="934,1237">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="24" name="SHF1" tags="" position="527,1144">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="25" name="Taxidermy" tags="" position="787,953">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="26" name="Park" tags="" position="786,1363">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="27" name="Bar" tags="" position="657,1150">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="28" name="Apartment Lobby" tags="" position="656,1276">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="29" name="Abandoned Nightclub" tags="" position="938,1370">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="30" name="Derelict Housing" tags="" position="528,1269">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="31" name="Hive Entrance" tags="" position="525,1405">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="32" name="Palace Entrance" tags="" position="793,1505">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="33" name="Sewer Entrance (GHF)" tags="" position="1069,1307">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="34" name="Sewer" tags="" position="1303,1002">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="35" name="Sewer Entrance (Bar)" tags="" position="657,1025">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="36" name="Untitled Passage" tags="" position="658,1394">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="37" name="Untitled Passage 1" tags="" position="661,1519">Double-click this passage to edit it.</tw-passagedata>
+You walk up to the counter and politely ask where the babies are. You are directed where to go. You start to walk off, but double back to thank the secretary attendant person thing. She looks up politely as you thank her, but she seems puzzled. &quot;For what? May I help you, ma&#39;am?&quot; stuff blah blah you walk off to the [[Pupae Ward]]
+
+Once you have been to the supply closet, you the directional map appears</tw-passagedata>
+<tw-passagedata pid="23" name="GHF1" tags="" position="934,1237">Imposing building blah blah
+
+-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
+You go up to GHF, but are quickly turned away by security - it&#39;s a high tech thing with retina scanners n shit. Which is good since security at the hive entrance has been lax recently.
+
+Directional Map at bottom</tw-passagedata>
+<tw-passagedata pid="24" name="SHF1" tags="" position="527,1144">Description
+
+Security is a lot more low tech, but also a lot scarier. You don&#39;t even try to approach - youre no use to the queen dead.</tw-passagedata>
+<tw-passagedata pid="25" name="Taxidermy" tags="" position="787,953">Not yet</tw-passagedata>
+<tw-passagedata pid="26" name="Park" tags="" position="783,1357">Description.
+
+Look at Abandoned Nightclub (click)
+
+paragraph about getting a sense of the guards rotations by casually snoopin from a park bench, flag is dropped or variable changed or whatever for use at the abandoned nightclub
+
+Directional Map below</tw-passagedata>
+<tw-passagedata pid="27" name="Bar" tags="" position="657,1150">Description
+
+If not visited GHF1 or SHF1, no one of interest is there.
+If you have, conversation happens with worker at the SHF on a lunch break.
+
+Blah blah blah blah blah.
+
+You respond. (click)
+
+blah blah blah appears
+
+you respond (click)
+
+blah blah appears
+
+one response
+another response
+
+first response result: if you have been to the ghf, you are told about the sewer entrances, sewer entrances become accessible on main map. if you haven&#39;t, youre waved off
+
+second response result: if you have been to the shf, you are able to get keycard 
+
+once you get either, worker goes back to her job, wont be able to unlock the other area until next loop</tw-passagedata>
+<tw-passagedata pid="28" name="Dorm Lobby" tags="" position="656,1392">Description
+
+[[Room 1]]
+[[Room 2]]
+[[Room 3]]
+
+-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-
+Directional Map</tw-passagedata>
+<tw-passagedata pid="29" name="Abandoned Nightclub" tags="" position="944,1370">Description.
+
+If not been snoopin in the park, you get noticed by a guard and must duck [[away|Sewer Exit]].
+If been snoopin in the park, you sneak in and find The First Macguffin. variable changed to reflect such. You then quickly duck [[away|Sewer Exit]] before anyone notices you.</tw-passagedata>
+<tw-passagedata pid="30" name="Derelict Housing" tags="" position="528,1269">Description
+
+Simple puzzle, find an old book about something bee pun
+
+Dirrectional Map</tw-passagedata>
+<tw-passagedata pid="31" name="Hive Entrance" tags="" position="525,1405">Description
+
+-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-
+nothing to see here
+
+-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-
+Directional Map</tw-passagedata>
+<tw-passagedata pid="32" name="Palace Entrance" tags="" position="793,1505">Description
+
+You have no business to be here.
+
+-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-
+
+Directional Map</tw-passagedata>
+<tw-passagedata pid="33" name="Sewer Exit" tags="" position="1147,1382">You can go back in the Sewers if you really want, or sneak into the back entrance of the ghf. or check out the abandoned night club
+
+[[Sewer]]
+[[GHF3]]
+[[Abandoned Nightclub]]</tw-passagedata>
+<tw-passagedata pid="34" name="Sewer" tags="" position="1228,916">Adventures happen. Maybe a small text adventure maze thing, you know, left right backwards forwards, etc. those are popular with the kids, right? This can be skipped once completed once.
+
+[[Exit the sewers!|Sewer Exit]]</tw-passagedata>
+<tw-passagedata pid="35" name="Sewer Entrance (Bar)" tags="" position="657,1025">Only becomes visible after successful talking to factory worker
+
+Go to [[Sewer]]</tw-passagedata>
+<tw-passagedata pid="36" name="Shrine to Jerry Seinfield" tags="" position="657,1524">this is a joke</tw-passagedata>
+<tw-passagedata pid="37" name="School" tags="" position="653.0003999999999,1267">later yo</tw-passagedata>
 <tw-passagedata pid="38" name="Pupae Ward" tags="" position="1074,1079">things happen, get into [[Supply Closet]]</tw-passagedata>
-<tw-passagedata pid="39" name="Supply Closet" tags="" position="1199.0002,1118">Supplies are running low due to the shit going down, but you can probably steal about half of what you&#39;ll need, and there still might be enough left over for a few pupae.
+<tw-passagedata pid="39" name="Supply Closet" tags="" position="1199,1118">Supplies are running low due to the shit going down, but you can probably steal about half of what you&#39;ll need, and there still might be enough left over for a few pupae.
 
 steal - you take the shit, description of room becomes smaller. if you choose dont steal before, add in text about swallowing your shame. either way, dont steal option disappears, this option disappears.
 dont steal - you do nothing, and just stare at the royal jelly, ashamed for even thinking about stealing it. disappears after used.
 [[leave|Pupae Ward]] - pops up after making one of the above choices.
 
 new description if steal: Supplies are running critically low, partially due to the bad shit, partially because you literally stole candy from *multiple* babies.</tw-passagedata>
+<tw-passagedata pid="40" name="Directional Map" tags="" position="785,1232">This goes in passages that can be used to visit the other main passages. All passages are marked as such. Eventually it will become a visual map.
+
+[[Main Plaza]]
+[[Go to Good Honey Factory|GHF1]]
+[[Go to Shitty Honey Factory|SHF1]]
+[[Stroll through the Park|Park]]
+[[Ask the college kids if theyve seen anything while, you know, pupating|Dorm Lobby]]
+[[Derelict Housing]] 
+[[Bar]]
+[[Hive Entrance]] 
+[[Hospital Lobby]] 
+[[Pawn Shop]] 
+[[Sewer Entrance (Bar)]] Only available if told about it by barfly
+[[Palace Entrance]] 
+[[School]]</tw-passagedata>
+<tw-passagedata pid="41" name="GHF3" tags="" position="1093,1245">You sneak in, have some adventures and dialogue choices or something, and steal some dank herb i mean royal jelly
+
+some dank jelly</tw-passagedata>
+<tw-passagedata pid="42" name="Room 1" tags="" position="263,1296">nah</tw-passagedata>
+<tw-passagedata pid="43" name="Room 2" tags="" position="261,1421">go away im pupating in here</tw-passagedata>
+<tw-passagedata pid="44" name="Room 3" tags="" position="264,1546">gratuituous sex scene</tw-passagedata>
 </tw-storydata>
 
 
